<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Bowser Shoulders!</string>
    <string name="app_name">Bowser Shoulders</string>
    <string name="speed">Speed: </string>
    <string name="mode">Select a Mode:</string>
    <string name="startSpinner">Select a Mode</string>
    <string name="colorOne">Color One: </string>
    <string name="colorTwo">Color Two: </string>
    <string name="set_preferences">Preferences</string>
</resources>
